更新一个段落

--- a/第二十八章：信号的使用案例和规避技术.md
+++ b/第二十八章：信号的使用案例和规避技术.md
@@ -169,9 +169,15 @@ The same applies to overriding `delete()` instead of using `pre_delete` and `pos
 ### 28.2.4 Use a Helper Function Instead of Signals
 We find this approach useful under two conditions:  
 
+我们发现这个方法再下面两种条件下非常有用：  
+
 1. *Refactoring*: Once we realize that certain bits of code no longer need to be obfuscated as signals and want to refactor, the question of ‘Where do we put the code that was in a signal?’ arises. If it doesn’t belong in a model manager, custom validator, or overloaded model method, where does it belong?  
 
+*重构*：当我们认识到一部分代码在使用信号变的令人困惑，而且我们想要重构，那么问题来了，“我们需要将哪些代码放进信号中呢？”。如果这部分代码不属于模型管理器或者自定义的验证器或者重写的模型方法，那么它到底属于什么地方呢？  
+
 2. *Architecture*: Sometimes developers use signals because we feel the model has become too heavyweight and we need a place for code. While Fat Models are a nice approach, we ad- mit it’s not much fun to have to parse through a 500 or 2000 line chunk of code.  
+
+*架构*：有时候开发者使用信号，是因为我们感觉模型太重了，我们需要给代码准备一个地方。  
 
 This solution, suggested to us by Django core developer Aymeric Augustin, is to place the code in helper functions. If done right, this helps us write cleaner, more reusable code.  
 
